# montreal-urban-accessibility-clustering

./: .gitignore  README.md  main.py  pyproject.toml
data/: grid.geojson
data/features/: stops.geojson
data/meta/: group_mappings.json  translations.json
notebooks/: 00_grid_setup.ipynb  01_pois.ipynb  02_stm.ipynb
src/final_project/: config.py  utils.py
src/final_project/data/: poi.py  stm.py
