[project]
name = "csci-108-final-project"
version = "0.1.0"
description = "Montreal urban accessibility clustering"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geohexgrid>=3.0.0",
    "geopandas>=1.1.2",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "notebook>=7.5.1",
]
